@@ -1,4 +1,7 @@
 2009-05-16 michaudm <michael.michaud@free.fr>
+    Optimization for large selection deletion :
+        * optimize FeatureDataset.removeAll, using FID for removeAll method
+        * optimize EditTransaction.setGeometries(), creating an index on the fly
     Fixed an issue throwing IndexOutOfBoundException in ViewSchemaPlugIn 
     Reformatting and cleaning of shapefile.PolygonHandler
 
